# VcpckWithCmakeJo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
VcAndCmakeTemplate/: CMakeLists.txt  VcAndCmakeTemplate.cpp  VcAndCmakeTemplate.h
